# bfrs

./: .gitignore  Cargo.toml  README.md
bfrs1/: Cargo.toml
bfrs1/src/: ir.rs  lib.rs  main.rs  memory.rs  pretty.rs
bfrs1/src/graph/: arena.rs  hash_arena.rs  mod.rs
bfrs1/tests/: optimize.rs
bfrs2/: Cargo.toml  README.md
bfrs2/src/: arena.rs  block.rs  cfg.rs  egraph.rs  lib.rs  main.rs  node.rs  parse.rs  pretty.rs  properties.rs
bfrs2/src/optimize/: add_assign.rs  copy_const.rs  mod.rs  peel.rs
docs/: e-graph.md  optimizing_hello_world.md  recursive_peeling.md
src/: ast.rs  block.rs  cfg.rs  graph.rs  ir.rs  lib.rs  main.rs  memory.rs  node.rs  parse.rs  pretty.rs  properties.rs  region.rs  value.rs
src/graph/: arena.rs  graph.rs  hash_arena.rs  index.rs  mod.rs
src/optimize/: add_assign.rs  mod.rs  peel.rs
tests/: README.md  move_right.b  mul.b  optimize.rs  sudoku_start.b
