[package]
name = "bfrs1"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
rust-version = "1.81" # for std::hint::assert_unchecked
description = "An optimizing compiler for Brainfuck"
license = "MPL-2.0"
keywords = ["brainfuck", "compiler"]
categories = ["compilers"]

[dependencies]
hashbrown = "0.15.0"

[dev-dependencies]
glob = "0.3.1"
